--- a/v2/client/package.json
+++ b/v2/client/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.10.4",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.465.0",
@@ -20,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
@@ -32,6 +35,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.3"
   }
 }
