--- a/v3/client/package.json
+++ b/v3/client/package.json
@@ -18,14 +18,19 @@
     "@react-three/fiber": "^8.17.10",
     "@splinetool/react-spline": "^4.0.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
     "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0"
   },
   "devDependencies": {
@@ -33,11 +38,14 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.1"
   }
 }
